<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	 
	<groupId>net.tascalate</groupId>
	<artifactId>net.tascalate.concurrent.addon</artifactId>
	<version>0.1.0</version>
	<packaging>jar</packaging>  

	<name>Tascalate Concurrent AddOn (JSR481)</name>
	<url>https://github.com/vsilaev/tascalate-concurrent</url> 
	<description>Add-on for Tascalate Concurrent with features supported by JDK 21+</description>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>
	<scm>
		<connection>scm:git:git://github.com/vsilaev/tascalate-concurrent-addon.git</connection>
		<developerConnection>scm:git:ssh://github.com:vsilaev/tascalate-concurrent-addon.git</developerConnection>
		<url>https://github.com/vsilaev/tascalate-concurrent-addon.git</url>
	</scm>

	<developers>
		<developer>
			<name>Valery Silaev</name>
			<email>vsilaev at java.net</email>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<tascalate.concurrent.version>0.9.9</tascalate.concurrent.version>
		<license.header>./HEADER-ORIGINAL.txt</license.header>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
    				<groupId>${project.groupId}</groupId>
	    			<artifactId>${project.groupId}.concurrent</artifactId>
    				<version>${tascalate.concurrent.version}</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.11</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>


	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.3.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.11.2</version>
						<configuration>
							<release>21</release>
							<additionalOptions>--enable-preview</additionalOptions>
						</configuration>	
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.7</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>


	<dependencies>
		<dependency>
			<groupId>${project.groupId}</groupId>
    			<artifactId>${project.groupId}.concurrent</artifactId>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!--
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<aggregate>true</aggregate>
					<includes>
						<include>**/*.java</include>
					</includes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.2</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.3</version>
				<configuration>
					<includes>
						<include>**/*TestSuite.java</include>
					</includes>
					<excludes>
						<exclude>**/Abstract*</exclude>
					</excludes>
					<testFailureIgnore>true</testFailureIgnore>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.7.0</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>false</autoReleaseAfterClose>
				</configuration>
			</plugin> 
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.0</version>
				<executions>
					<execution>
						<id>default-compile</id>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<jdkToolchain>
								<version>21</version>
								<vendor>Oracle</vendor>
							</jdkToolchain>
						</configuration>
					</execution> 
				</executions>
				<configuration>
                                        <release>21</release>  
					<compilerArgs>
						<arg>--enable-preview</arg>
					</compilerArgs>
					<!--
					<debug>false</debug>
					-->
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>